tests/read_only_object/read_only_object.exp
Error -------------------------------------------------------------- test.js:6:5

Error: test.js:6
  6: obj.p = 42; // Should error!
         ^ Cannot assign `42` to `obj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:14:13

Error: test.js:14
 14: multiKeyObj.p = 42; // Should error!
                 ^ Cannot assign `42` to `multiKeyObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:15:13

Error: test.js:15
 15: multiKeyObj.q = 42; // Should error!
                 ^ Cannot assign `42` to `multiKeyObj.q` because property `q` is not writable.

Error ------------------------------------------------------------ test.js:22:12

Error: test.js:22
 22:   unionObj.p = 42; // Should error!
                ^ Cannot assign `42` to `unionObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:24:13

Error: test.js:24
 24:   (unionObj.q: number); // Should error!
                 ^ Cannot get `unionObj.q` because property `q` is missing in object type [1].
  References:
   20: declare var unionObj: $ReadOnly<UnionObj>;
                                       ^^^^^^^^ [1]: object type

Error ------------------------------------------------------------ test.js:26:12

Error: test.js:26
 26:   unionObj.p = 42; // Should error!
                ^ Cannot assign `42` to `unionObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:27:12

Error: test.js:27
 27:   unionObj.q = 42; // Should error!
                ^ Cannot assign `42` to `unionObj.q` because property `q` is not writable.

Error ------------------------------------------------------------ test.js:36:18

Error: test.js:36
 36:   spreadUnionObj.p = 42; // Should error!
                      ^ Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:37:18

Error: test.js:37
 37:   spreadUnionObj.z = 42; // Should error!
                      ^ Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

Error ------------------------------------------------------------ test.js:40:19

Error: test.js:40
 40:   (spreadUnionObj.q: number); // Should error!
                       ^ Cannot get `spreadUnionObj.q` because property `q` is missing in `SpreadUnionObj` [1].
  References:
   34: declare var spreadUnionObj: $ReadOnly<SpreadUnionObj>
                                             ^^^^^^^^^^^^^^ [1]: `SpreadUnionObj`

Error ------------------------------------------------------------ test.js:42:18

Error: test.js:42
 42:   spreadUnionObj.p = 42; // Should error!
                      ^ Cannot assign `42` to `spreadUnionObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:43:18

Error: test.js:43
 43:   spreadUnionObj.q = 42; // Should error!
                      ^ Cannot assign `42` to `spreadUnionObj.q` because property `q` is not writable.

Error ------------------------------------------------------------ test.js:44:18

Error: test.js:44
 44:   spreadUnionObj.z = 42; // Should error!
                      ^ Cannot assign `42` to `spreadUnionObj.z` because property `z` is not writable.

Error ------------------------------------------------------------ test.js:52:17

Error: test.js:52
 52: intersectionObj.p = 42; // Should error!
                     ^ Cannot assign `42` to `intersectionObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:53:17

Error: test.js:53
 53: intersectionObj.q = 42; // Should error!
                     ^ Cannot assign `42` to `intersectionObj.q` because property `q` is not writable.

Error ------------------------------------------------------------ test.js:59:15

Error: test.js:59
 59: indexerKeyObj.p = 42; // Should error!
                   ^ Cannot assign `42` to `indexerKeyObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:60:15

Error: test.js:60
 60: indexerKeyObj.x = true; // Should error!
                   ^ Cannot assign `true` to `indexerKeyObj.x` because property `x` is not writable.

Error ------------------------------------------------------------ test.js:66:10

Error: test.js:66
 66: exactObj.p = 42; // Should error!
              ^ Cannot assign `42` to `exactObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:71:11

Error: test.js:71
 71: spreadObj.p = 42; // Should error!
               ^ Cannot assign `42` to `spreadObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:76:16

Error: test.js:76
 76: spreadExactObj.p = 42; // Should error!
                    ^ Cannot assign `42` to `spreadExactObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:81:15

Error: test.js:81
 81: objWithMethod.p = 42; // Should error!
                   ^ Cannot assign `42` to `objWithMethod.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:82:15

Error: test.js:82
 82: objWithMethod.fn = () => true; // Should error!
                   ^^ Cannot assign function to `objWithMethod.fn` because property `fn` is not writable.

Error ------------------------------------------------------------ test.js:90:10

Error: test.js:90
 90: instance.p = 42; // Should error!
              ^ Cannot assign `42` to `instance.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:95:14

Error: test.js:95
 95: writeOnlyObj.p = 42; // Should error!
                  ^ Cannot assign `42` to `writeOnlyObj.p` because property `p` is not writable.

Error ------------------------------------------------------------ test.js:99:30

Error: test.js:99
 99: type readOnlyNum = $ReadOnly<number>;
                                  ^^^^^^ Cannot instantiate `$ReadOnly` because number [1] is not an object.
  References:
   99: type readOnlyNum = $ReadOnly<number>;
                                    ^^^^^^ [1]: number


Found 25 errors
